# Clankers3

./: .gitignore  LICENSE  TODO.md  WEBPLAN.md  acid_house.json  config.py  llm_clients.py  llm_menu.py  run.bat  session.py  start.bat  vercel.json
.claude/: launch.json  settings.local.json
agents/bassline/: bass_sh101.py
agents/drums/: drums_agent.py
agents/harmony/: harmony_agent.py
api/: evolve.py  llm.js  main.py  session_store.py
api/band/: automate.js  chat.js  harmony.js  session-new.js  sheet-evolve.js  utils.js
chatroom/: chatroom.py
clankers_dsp/: Cargo.toml  README_FFI.md  patch-wasm.js
clankers_dsp/include/: clankers_dsp.h
clankers_dsp/src/: bass.rs  biquad.rs  buchla.rs  cc.rs  delay.rs  drums.rs  ffi.rs  lib.rs  oscillator.rs  pads.rs  rhodes.rs  voder.rs  wasm.rs
clankers_dsp/src/graph/: engine.rs  mod.rs  node.rs  parse.rs  voice.rs
clankers_dsp/tests/: ffi_smoke.rs
conductor/: conductor.py
web/: clankers_demo.clank  fx.js  index.html  midi-input.js  midi-output.js  modular-sync.js  render.js  sequencer.js  serve.js  synth-lab.js  tutorial.js  voder-test.html
web/synth/: voder-g2p.js  voder-say.js
web/synth/core/: AudioEngine.js  ClankersBridge.js  GraphFxAdapter.js  InstrumentAdapter.js  InstrumentRegistry.js  JSONBridge.js  (+2 more)
web/wasm/: clankers_dsp.d.ts  clankers_dsp.js  clankers_dsp_bg.wasm  clankers_dsp_bg.wasm.d.ts  package.json
web/worklets/: bass-worklet.js  beat-repeat-worklet.js  buchla-worklet.js  drums-worklet.js  graph-fx-worklet.js  pads-worklet.js  rhodes-worklet.js  synth-graph-worklet.js  voder-worklet.js
(+19 files in other folders)
